--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "next": "13.4.5",
-    "prisma": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "dotenv-cli": "^7.2.1",
-    "json-server": "^0.17.3"
+    "json-server": "^0.17.3",
+    "prisma": "^4.15.0"
   }
 }
